1999-12-12  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* bin/main.cc (class clock_app): Moved out of unnamed namespace.
	(class clock_app): Add static variables for options.
	(namespace): Remove options variable moved to class clock_app.
	(parse_options): Change options handling.

	* NEWS: Modified.

	* bin/profile.cc (save): Set DTD.

	* bin/Makefile.am (pkgdata_DATA): Add options-0.dtd.
	(INCLUDES): Define OPTIONS_DTD.

	* bin/options-0.dtd: New file.

1999-11-18  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* TODO: Modified.

1999-11-16  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* TODO: Modified.

	* NEWS: Modified.

	* doc/rglclock.xml: Modified.

	* README: Modified.

	* NEWS: Modified.

	* configure.in (ALL_LINGUAS): Substitute ja.eucjp with ja.eucJP.

1999-11-15  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* doc/rglclock.texi: New file.

	* configure.in (ALL_LINGUAS): Add doc/Makefile to AC_OUTPUT.

	* Makefile.am (SUBDIRS): Add doc.

	* doc/Makefile.am: New file.
	* doc/rglclock.xml: New file.

1999-11-14  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* lib/clockoptions.cc (update): New function.
	(create_widget): Use the minimum value for update rate to display.

	* include/glclock.h (class clock_options_dialog): Add new member
 	update to class general_options_page.

	* lib/modaldialog.cc (act): Call update on window.

	* include/utils.h (struct options_page): Add new member update.

	* lib/options.cc: Move handle_ok and handle_cancel.
	(update): Invoke page callbacks.

	* lib/about.cc (handle_ok): Rewrote as non-static method.
	(deliver_ok): New function.
	(populate): Use deliver_ok for signal.

	* include/glclock.h (class about_dialog): Make method handle_ok
 	non-static.

	* lib/options.cc (deliver_ok, deliver_cancel): New functions.
	(populate): Use the new functions for signals.
	(handle_ok, handle_cancel): Rewrote as non-static member.

	* include/utils.h (class options_dialog): Make members handle_ok
 	and handle_cancel non-static.
